check_error_2.txt
warning: tracea@0.1.0: CUDA (nvcc) not found. Skipping template compilation.
    Checking tracea v0.1.0 (E:\Projects\Tracea)
error[E0283]: type annotations needed
   --> src\bin\benchmark_vs_pytorch.rs:239:13
    |
239 |     manager.copy_to_device(gemm_a, cast_slice(&a_host)).expect("Copy A");
    |             ^^^^^^^^^^^^^^         ------------------- type must be known at this point
    |             |
    |             cannot infer type of the type parameter `T` declared on the method `copy_to_device`
    |
    = note: cannot satisfy `_: Pod`
    = help: the following types implement trait `Pod`:
              ()
              ManuallyDrop<T>
              Option<T>
              PhantomData<T>
              PhantomPinned
              Wrapping<T>
              [T; N]
              __m128
            and 47 others
note: required by a bound in `memory::<impl RuntimeManager>::copy_to_device`
   --> E:\Projects\Tracea\src\runtime\manager\memory.rs:188:30
    |
188 |     pub fn copy_to_device<T: Pod>(&self, id: BufferId, data: &[T]) -> Result<(), String> {
    |                              ^^^ required by this bound in `memory::<impl RuntimeManager>::copy_to_device`
help: consider specifying the generic argument
    |
239 |     manager.copy_to_device::<T>(gemm_a, cast_slice(&a_host)).expect("Copy A");
    |                           +++++

For more information about this error, try `rustc --explain E0283`.
warning: tracea@0.1.0: CUDA (nvcc) not found. Skipping template compilation.
error: could not compile `tracea` (bin "benchmark_vs_pytorch") due to 1 previous error
